--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
  DB_HOST = mongodb+srv://vitalisklymko:jmC9BcU1GufBUCOe@cluster0.jrzm3tg.mongodb.net/db-contacts?retryWrites=true&w=majority
  PORT= 3000
+  SECRET_KEY = 0qq9timfws&3sywg7v9mbp7psftnysqo
