--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
- DB_HOST = mongodb+srv://vitalisklymko:jmC9BcU1GufBUCOe@cluster0.jrzm3tg.mongodb.net/db-contacts?retryWrites=true&w=majority
- PORT= 3000
-  SECRET_KEY = 0qq9timfws&3sywg7v9mbp7psftnysqo
+    DB_HOST = 
+    PORT= 3000
+    SECRET_KEY = 
+    UKR_NET_EMAIL = 
+    UKR_NET_PASSWORD = 
+     SERVER_URL =
